--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
                     <mainClass>com.myorg.SampleAppNewApp</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
