--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,25 +2,30 @@ name: CDK push
 on: push
 
 jobs:
-    deploy:
-        name: Deploy
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
-              with:
-                node-version: 14.x
-            - name: install aws cdk
-              run: 'sudo npm install -g aws-cdk'
-              
-            - name: Configure AWS Credentials
-              uses: aws-actions/configure-aws-credentials@v1
-              with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-region: ${{ secrets.AWS_REGION }}
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          
-            
-              
-            - name: CDK synth
-              run: cdk synth
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build
+        run: ./mvnw package -B
+
+      - name: install aws cdk
+        run: "sudo npm install -g aws-cdk"
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: CDK synth
+        run: cdk synth
