--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,11 +11,13 @@ jobs:
         with:
           node-version: 14.x
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: adopt
           java-version: 11
+          cache: 'maven'
       - name: Build
-        run: ./mvnw package -B
+        run: mvn compile -B
 
       - name: install aws cdk
         run: "sudo npm install -g aws-cdk"
