--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,6 +5,10 @@ jobs:
   deploy:
     name: Diff
     runs-on: ubuntu-latest
+    env: 
+      CDK_DEPLOY_REGION: eu-west-1
+      CDK_DEPLOY_STACK_NAME: Prod
+      CDK_DEPLOY_ACCOUNT: 601912882130
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
