--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,8 +6,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     env: 
-      CDK_DEPLOY_REGION: "${{ github.ref == 'refs/heads/master' && 'eu-west-1' || 'eu-central-1' }}"
-      CDK_DEPLOY_STACK_NAME: "${{ github.ref == 'refs/heads/master' && 'Prod' || 'Dev' }}"
+      CDK_DEPLOY_REGION: "${{ github.ref == 'refs/heads/main' && 'eu-west-1' || 'eu-central-1' }}"
+      CDK_DEPLOY_STACK_NAME: "${{ github.ref == 'refs/heads/main' && 'Prod' || 'Dev' }}"
       CDK_DEPLOY_ACCOUNT: 601912882130
     steps:
       - uses: actions/checkout@v2
